--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <head>
-  <title>Etch-a-Sketch</title>
+  <title>Etch-A-Sketch</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="grid-container">
-
+  <div id="header">
+    <h1 id="title">Etch-A-Sketch</h1>
+    <div id="optional-buttons">
+      <button id="change-grid">Change Size</button>
+    </div>
   </div>
   <script src="script.js"></script>
-</body>
